[gd_scene load_steps=3 format=3 uid="uid://cv6uww8k8yhc8"]

[ext_resource type="Script" path="res://scripts/player_info_ui.gd" id="1_lrg38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j372s"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.752941)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PlayerInfoUI" type="CanvasLayer"]
script = ExtResource("1_lrg38")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 86.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j372s")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SteamNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "玩家: 加载中..."

[node name="LatencyLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "延迟: 正在计算..."

[node name="UpdateTimer" type="Timer" parent="."]
autostart = true 